--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ nav ul li a:hover {
 }
 
 
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 600px) {
   .hero {
     position: fixed;
     top: 0;
